# hand-age

./: .gitignore  HandInfo.txt  create_finetune_dataset.py  hand_data_explorer.py  inspect_model.py  main.py  predict.py  predict_multimodel.py  prepare_balanced_dataset.py  prepare_compromise_dataset.py  prepare_dataset.py  prepare_full_dataset.py  pyproject.toml  train_model.py  train_multimodel.py  vision_analyzer.py  visualize_gradcam.py  visualize_multimodel.py
balanced_dataset_splits/: test.json  train.json  val.json
compromise_dataset_splits/: test.json  train.json  val.json
dataset_splits/: test.json  test_verification_samples.json  train.json  val.json
full_dataset_splits/: test.json  train.json  val.json
